--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navbar Responsiva</title>
+
+    <!-- Importando a fonte sofisticada do Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+
     <style>
         /* Paleta de cores */
         :root {
@@ -21,7 +25,7 @@
         }
 
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Playfair Display', serif; /* Fonte sofisticada aplicada */
             background-color: #f4f4f4;
         }
 
@@ -36,7 +40,7 @@
         }
 
         .logo {
-            font-size: 1.5rem;
+            font-size: 1.8rem;
             font-weight: bold;
             color: var(--secondary-color);
         }
@@ -50,6 +54,7 @@
             color: var(--text-color);
             text-decoration: none;
             transition: color 0.3s;
+            font-weight: 500;
         }
 
         .menu a:hover {
@@ -66,6 +71,7 @@
             border: none;
             border-radius: 4px;
             outline: none;
+            font-family: 'Playfair Display', serif;
         }
 
         /* Responsividade */
@@ -98,8 +104,9 @@
 
         .coming-soon h1 {
             margin-top: 20px;
-            font-size: 2rem;
+            font-size: 2.5rem;
             color: var(--primary-color);
+            font-weight: bold;
         }
     </style>
 </head>
