--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar Responsiva</title>
+    <title>Site Sofisticado</title>
 
-    <!-- Importando a fonte sofisticada do Google Fonts -->
+    <!-- Fonte sofisticada: Playfair Display -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 
     <style>
@@ -15,9 +15,10 @@
             --secondary-color: #18BC9C;
             --text-color: #ECF0F1;
             --hover-color: #1ABC9C;
+            --background-color: #f4f4f4;
         }
 
-        /* Reset básico */
+        /* Reset padrão */
         * {
             margin: 0;
             padding: 0;
@@ -25,11 +26,13 @@
         }
 
         body {
-            font-family: 'Playfair Display', serif; /* Fonte sofisticada aplicada */
-            background-color: #f4f4f4;
+            font-family: 'Playfair Display', serif;
+            background-color: var(--background-color);
+            color: var(--primary-color);
+            line-height: 1.6;
         }
 
-        /* Estilo da Navbar */
+        /* Navbar */
         .navbar {
             display: flex;
             justify-content: space-between;
@@ -37,6 +40,9 @@
             background-color: var(--primary-color);
             padding: 1rem 2rem;
             color: var(--text-color);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
         }
 
         .logo {
@@ -54,59 +60,89 @@
             color: var(--text-color);
             text-decoration: none;
             transition: color 0.3s;
-            font-weight: 500;
         }
 
         .menu a:hover {
             color: var(--hover-color);
         }
 
-        .search-bar {
-            display: flex;
-            align-items: center;
-        }
-
         .search-bar input {
             padding: 0.5rem;
-            border: none;
             border-radius: 4px;
+            border: none;
             outline: none;
             font-family: 'Playfair Display', serif;
         }
 
-        /* Responsividade */
-        @media (max-width: 768px) {
-            .menu {
-                display: none; /* Esconde o menu em telas pequenas */
-            }
-
-            .navbar {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-
-            .search-bar {
-                width: 100%;
-                margin-top: 1rem;
-            }
+        /* Menu Hamburguer */
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
         }
 
-        /* Estilo da imagem no corpo da página */
+        .hamburger div {
+            width: 25px;
+            height: 3px;
+            background-color: var(--text-color);
+            margin: 4px 0;
+            transition: 0.4s;
+        }
+
+        /* Seções */
+        section {
+            padding: 60px 20px;
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+
+        h2 {
+            margin-bottom: 20px;
+            font-size: 2rem;
+            color: var(--secondary-color);
+        }
+
+        p {
+            margin-bottom: 15px;
+            font-size: 1.1rem;
+        }
+
+        /* EM BREVE */
         .coming-soon {
-            margin: 50px auto;
             text-align: center;
+            margin-top: 50px;
         }
 
         .coming-soon img {
             max-width: 100%;
             height: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
 
         .coming-soon h1 {
             margin-top: 20px;
             font-size: 2.5rem;
             color: var(--primary-color);
-            font-weight: bold;
+        }
+
+        /* Responsividade */
+        @media (max-width: 768px) {
+            .menu {
+                display: none;
+                flex-direction: column;
+                width: 100%;
+                background-color: var(--primary-color);
+                margin-top: 10px;
+            }
+
+            .menu.active {
+                display: flex;
+            }
+
+            .hamburger {
+                display: flex;
+            }
         }
     </style>
 </head>
@@ -114,27 +150,59 @@
 
     <!-- Navbar -->
     <nav class="navbar">
-        <!-- Logo -->
         <div class="logo">MinhaLogo</div>
 
-        <!-- Menu -->
-        <div class="menu">
-            <a href="#">Início</a>
-            <a href="#">Sobre</a>
-            <a href="#">Contato</a>
+        <!-- Menu de Navegação -->
+        <div class="menu" id="menu">
+            <a href="#sobre">Sobre</a>
+            <a href="#servicos">Serviços</a>
+            <a href="#em-breve">EM BREVE</a>
         </div>
 
         <!-- Barra de Pesquisa -->
         <div class="search-bar">
             <input type="text" placeholder="Pesquisar...">
         </div>
+
+        <!-- Botão Hamburguer -->
+        <div class="hamburger" id="hamburger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </nav>
 
-    <!-- Corpo da página -->
-    <div class="coming-soon">
+    <!-- Seção Sobre -->
+    <section id="sobre">
+        <h2>Sobre Nós</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec est at libero luctus bibendum. 
+           Aenean vel nibh vel metus vulputate tristique.</p>
+        <p>Proin porttitor, nulla nec egestas congue, lectus justo pulvinar augue, sed cursus odio urna at orci.</p>
+    </section>
+
+    <!-- Seção Serviços -->
+    <section id="servicos">
+        <h2>Serviços</h2>
+        <p>✔ Desenvolvimento Web</p>
+        <p>✔ Design Responsivo</p>
+        <p>✔ Consultoria de Marketing Digital</p>
+    </section>
+
+    <!-- Seção EM BREVE -->
+    <section id="em-breve" class="coming-soon">
         <img src="https://via.placeholder.com/600x300?text=EM+BREVE!" alt="EM BREVE!">
         <h1>EM BREVE!</h1>
-    </div>
+    </section>
+
+    <!-- Script para Menu Hamburguer -->
+    <script>
+        const hamburger = document.getElementById('hamburger');
+        const menu = document.getElementById('menu');
+
+        hamburger.addEventListener('click', () => {
+            menu.classList.toggle('active');
+        });
+    </script>
 
 </body>
 </html>
