--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar Responsiva</title>
+    <title>Navbar Oculta</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
 
-    <!-- Hover zone invisível para ativar a navbar -->
     <div class="hover-zone"></div>
 
-    <!-- Navbar -->
     <nav class="navbar">
         <div class="navbar-container">
             <a href="#" class="logo">MinhaLogo</a>
-            
+
             <div class="search-bar">
                 <input type="text" placeholder="Buscar...">
                 <button>🔍</button>
@@ -38,26 +36,15 @@
         </div>
     </nav>
 
-    <!-- Conteúdo da página -->
     <div class="content">
         <section>
             <h2>Bem-vindo!</h2>
-            <p>Este é um exemplo de navbar responsiva que aparece ao passar o mouse no topo da página.</p>
-        </section>
-
-        <section>
-            <h2>Sobre nós</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac venenatis elit.</p>
-        </section>
-
-        <section>
-            <h2>Serviços</h2>
-            <p>Oferecemos uma ampla gama de serviços para atender às suas necessidades.</p>
+            <p>Este é um exemplo de navbar que aparece ao passar o mouse no topo da página.</p>
         </section>
     </div>
 
     <script>
-        // Script para o menu hambúrguer funcionar no mobile
+        // Script do menu hambúrguer para telas pequenas
         const hamburger = document.getElementById('hamburger');
         const navMenu = document.getElementById('nav-menu');
 
