--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     </nav>
 
     <main class="content">
-        <h1>Bem-vindo ao Meu Portfólio!</h1>
-        <p>Aqui você encontrará uma amostra dos meus trabalhos e projetos.</p>
+        <h1>Em Breve!</h1>
+        <p>Em Breve!.</p>
         <div class="placeholder-image">
             <img src="em_breve.png" alt="Em Breve!" aria-label="Conteúdo em breve">
         </div>
-        <p>Estou trabalhando duro para trazer mais conteúdo incrível para você.</p>
+        <p>Em Breve!</p>
     </main>
 
     <script src="script.js"></script>
