--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav id="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="#">Seu Logo</a>
+                <img src="Gemini_Generated_Image_ei4mb4ei4mb4ei4m-removebg-preview" alt="">
             </div>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
