--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <nav id="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="Gemini_Generated_Image_ei4mb4ei4mb4ei4m-removebg-preview" alt="">
+                 <a href="#">
+                    <span class="logo-text">Seu Logo</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
