--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       color: var(--white);
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
       /* Initially only a thin bar visible */
-      height: 40px;
+      height: 70px;
       overflow: hidden;
       transition: height 0.4s ease;
       z-index: 1000;
@@ -75,11 +75,11 @@
       user-select: none;
       display: flex;
       align-items: center;
-      height: 32px;
+      height: 128px; /* Aumentei o height do container logo para 128px */
       flex-shrink: 0;
     }
     .logo img {
-      height: 100%;
+      height: 100%; /* escala conforme o container */
       width: auto;
       display: block;
     }
@@ -89,7 +89,7 @@
       display: flex;
       gap: 25px;
       font-weight: 600;
-      font-size: 0.7rem; /* Adjusted font size for pixel font readability */
+      font-size: 0.8rem; /* Adjusted font size for pixel font readability */
       /* Initially hidden, appear on navbar expanded */
       opacity: 0;
       transition: opacity 0.4s ease 0.2s;
@@ -119,7 +119,7 @@
       opacity: 0;
       pointer-events: none;
       transition: opacity 0.4s ease 0.2s;
-      margin-top: 8px;
+      margin-top: 5px;
       padding: 0 20px 10px 20px;
       display: flex;
       justify-content: flex-end;
@@ -222,7 +222,7 @@
     <div class="nav-top">
       <!-- Logo as image -->
       <div class="logo" aria-label="Logo do portfólio">
-        <img src="https://i.imgur.com/6B7LZxw.png" alt="Logo do Portfólio estilo Minecraft" />
+        <img src="Gemini_Generated_Image_ei4mb4ei4mb4ei4m-removebg-preview.png" alt="Logo do Portfólio estilo Minecraft" />
       </div>
       <!-- Menu (hidden until hover) appears right after logo -->
       <div class="menu" role="menubar" aria-label="Menu principal">
@@ -260,7 +260,7 @@
       <desc id="comingSoonDesc">Ilustração estilizada com texto Em Breve para portfólio.</desc>
       <circle cx="100" cy="100" r="90" fill="#2563eb" />
       <text
-        x="50%"
+        x="30%"
         y="50%"
         fill="#f9a825"
         font-size="40"
@@ -277,12 +277,5 @@
     <p class="coming-soon-text" aria-hidden="true">EM BREVE!</p>
   </main>
 
-  <script>
-    // JavaScript is optional for this navbar behavior.
-    // I included it only if any future dynamic feature is needed.
-    // Currently, all show/hide is done purely with CSS hover for performance and simplicity.
-  </script>
 </body>
 </html>
-
-
