--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="#">
-                    <img src="Portifolio/images/logo-portifolio.png" width=120% height=120% alt="Logo do Portifólio">
+                    <img src="images/logo-portifolio.png" width=120% height=120% alt="Logo do Portifólio">
                 </a>
             </div><!--Logo-->
             <nav class="menu-desktop">
