--- a/index.html
+++ b/index.html
@@ -56,7 +56,17 @@
         </div><!--Interface-->
     </header>
     <main>
-         
+         <style>
+  #your-element-selector {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+  }
+</style>
+
 
         <section class="topo-do-site">
                <div class="interface">
