--- a/index.html
+++ b/index.html
@@ -30,29 +30,118 @@
     once: true      // anima uma vez só ao aparecer
   });
 </script>
+<script>
+  const btnAbrir = document.getElementById("btn-abrir");
+  const menuMobile = document.getElementById("menu-mobile");
+  const overlay = document.getElementById("overlay");
+  const btnFechar = menuMobile.querySelector(".btn-fechar");
+
+  btnAbrir.addEventListener("click", () => {
+    menuMobile.style.display = "flex";
+    overlay.style.display = "block";
+  });
+
+  btnFechar.addEventListener("click", () => {
+    menuMobile.style.display = "none";
+    overlay.style.display = "none";
+  });
+
+  overlay.addEventListener("click", () => {
+    menuMobile.style.display = "none";
+    overlay.style.display = "none";
+  });
+</script>
 
     <header>
-        <div class="interface">
-            <div class="logo">
-                <a href="#">
-                    <img src="images/ChatGPT_Image_10_de_jul._de_2025__22_59_04-removebg-preview-removebg-preview.png" width=60% height=60% alt="Logo do Portifólio">
-                </a>
-            </div><!--Logo-->
-            <nav class="menu-desktop">
-                <ul>
-                    <li style="font-size: 20px;"><a href="#">Inicio</a></li>
-                    <li style="font-size: 20px;"><a href="#">Especialidades</a></li>
-                    <li style="font-size: 20px;"><a href="#">Sobre</a></li>
-                    <li style="font-size: 20px;"><a href="#">Projetos</a></li>
-                </ul>
-            </nav>
-            <div class="portifolio-contato">
-                <a href="#">
-                    <button>Contato</button>
-                </a>
-            </div>
-        </div><!--Interface-->
-    </header>
+  <div class="interface">
+    <div class="logo">
+      <a href="#">
+        <img src="images/ChatGPT_Image_10_de_jul._de_2025__22_59_04-removebg-preview-removebg-preview.png" alt="Logo do Portfólio">
+      </a>
+    </div>
+
+    <!-- MENU DESKTOP -->
+    <nav class="menu-desktop">
+      <ul>
+        <li><a href="#">Início</a></li>
+        <li><a href="#">Especialidades</a></li>
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Projetos</a></li>
+      </ul>
+    </nav>
+
+    <div class="portifolio-contato">
+      <a href="#"><button>Contato</button></a>
+    </div>
+
+    <!-- ÍCONE MENU MOBILE -->
+<!-- Botão abrir menu hamburguer -->
+<div id="btn-abrir" class="btn-abrir-menu">☰</div>
+  <i class="bi bi-list"></i>
+</div>
+
+<!-- Menu mobile -->
+<div id="menu-mobile" class="menu-mobile" aria-hidden="true">
+  <div class="btn-fechar">
+    <i class="bi bi-x-lg"></i>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="#">Início</a></li>
+      <li><a href="#">Especialidades</a></li>
+      <li><a href="#">Sobre</a></li>
+      <li><a href="#">Projetos</a></li>
+      <li><a href="#">Contato</a></li>
+    </ul>
+  </nav>
+</div>
+
+<!-- Overlay -->
+<div id="overlay-menu" class="overlay-menu"></div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const btnAbrir = document.getElementById("btn-abrir");
+    const menuMobile = document.getElementById("menu-mobile");
+    const overlay = document.getElementById("overlay");
+    const btnFechar = menuMobile.querySelector(".btn-fechar");
+
+    btnAbrir.addEventListener("click", () => {
+      menuMobile.style.display = "flex";
+      overlay.style.display = "block";
+    });
+
+    btnFechar.addEventListener("click", () => {
+      menuMobile.style.display = "none";
+      overlay.style.display = "none";
+    });
+
+    overlay.addEventListener("click", () => {
+      menuMobile.style.display = "none";
+      overlay.style.display = "none";
+    });
+  });
+</script>
+    </div>
+
+    <!-- MENU MOBILE -->
+    <div class="menu-mobile" id="menu-mobile">
+      <div class="btn-fechar">
+        <i class="bi bi-x-lg"></i>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">Início</a></li>
+          <li><a href="#">Especialidades</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Projetos</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="overlay-menu" id="overlay-menu"></div>
+  </div>
+</header>
     <main>  
         <section class="topo-do-site">
                <div class="interface">
